Update index.html with windsor castle photo

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     
     <!-- Slide 3: Day 1 - Windsor Castle -->
     <div class="swiper-slide">
-      <div class="slide-bg" style="background-image: url('https://images.unsplash.com/photo-1574877569028-2e79ef769092?w=1200&q=80');"></div>
+      <div class="slide-bg" style="background-image: url('https://cmsadmin.rct.uk/sites/default/files/styles/rctr_scale_crop_1920_750/public/images/event/lead-image/11/Windsor%20Castle%20with%20blue%20sky%201600.jpg.webp?itok=mnQCrrRE&w=1200&q=80');"></div>
       <div class="slide-content">
         <span class="day-badge">Hari 1</span>
         <h2>Rabu, 24 Des</h2>
